# python-talk

./: .gitignore  README.md  README_zh.md  action_deploy.sh
backend/: .env  .flaskenv  Dockerfile  README.md  README_zh.md  docker-compose-common.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.py  wsgi.py
backend/booksbot/: main.py  scrapy.cfg  scrapyd.log~
backend/booksbot/booksbot/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
backend/docs/nginx/: nginx.conf  python_talk.conf
backend/migrations/versions/: 07f1446c9aab_.py  1096252689fb_initial_migration.py  15c1935db1d8_.py  20202a7cad0a_.py  3ce6a7e1441d_.py  42a581ab15b0_.py  579a342bb88c_.py  5d1bca12fab8_.py  645f3d3254ae_.py  797d037705b0_.py  7e432170f8ab_.py  8882c6147280_.py  8aa8c270e402_.py  a18489680f73_.py  a4e216753f2e_.py  ca683e3ab8df_.py  cf030abf5052_.py  df8980f12680_.py
backend/python_talk/: __init__.py  app.py  auth.py  celery_app.py  config.py  development.db  entrypoint.py  exceptions.py  extensions.py  exts.py  models.py  tasks.py  test.sqlite
backend/python_talk/api/: __init__.py  book.py  index.py  menu.py  pet.py
backend/python_talk/blueprints/: __init__.py  user.py
backend/python_talk/celery_tasks/: async_tasks.py  periodic_taks.py
backend/python_talk/config/: __init__.py  base.py  development.py  production.py  test.py
backend/python_talk/models/: __init__.py  base.py  book.py  menu.py  user.py
backend/python_talk/scheduler/: jobs.py  runner.py  (+1 more)
backend/scripts/: menu_crud.py
backend/tests/: test_auth.py
(+68 files in other folders)
